<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.96">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/converter"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="3.23"
                android:layout_margin="5dp"
                android:background="@drawable/custombutton"
                android:backgroundTint="#A6E5E6"
                android:text="@string/pretvornik"
                android:textColor="#36ABAD"
                android:textSize="20sp"


                />

            <ImageButton
                android:id="@+id/imageButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/jeenako"
                android:onClick="delete"
                app:srcCompat="@android:drawable/ic_input_delete"

                android:layout_margin="5dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:onClick="clear"

                android:text="@string/clear"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"

                />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:onClick="factorial"

                android:text="@string/exponent"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:onClick="procent"

                android:text="@string/procent"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button23"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:onClick="divide"

                android:text="@string/devide"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button24"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="seven"

                android:text="@string/_7"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button25"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="eight"

                android:text="@string/_8"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button26"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="nine"

                android:text="@string/_9"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button27"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:onClick="multiply"

                android:text="@string/multiply"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button28"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="four"

                android:text="@string/_4"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button29"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="five"

                android:text="@string/_5"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button30"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="six"

                android:text="@string/_6"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button31"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:onClick="minus"

                android:text="@string/minus"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button32"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="one"

                android:text="@string/_1"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button33"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="two"

                android:text="@string/_2"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button34"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="three"

                android:text="@string/_3"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/button35"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton"
                android:onClick="plus"

                android:text="@string/plus"
                android:textAppearance="@style/ButtonText"
                android:layout_margin="5dp"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button39"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:background="@drawable/custombutton2"
                android:onClick="zero"

                android:text="@string/_0"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button40"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/custombutton2"
                android:onClick="decimal"

                android:text="@string/pika"
                android:textAppearance="@style/ButtonTextStevilke"
                android:layout_margin="5dp" />

            <Button
                android:id="@+id/button41"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/jeenako"
                android:onClick="equals"

                android:text="@string/enako"
                android:textAppearance="@style/ButtonTextStevilke"
                android:textColor="@color/enako"
                android:layout_margin="5dp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="false"
        android:inputType="none"
        android:hint="@string/enter_a_value"
        android:textAlignment="textEnd"
        android:textSize="35sp"
        android:textColor="@color/stevilke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore = "LabelFor"
        />


</androidx.constraintlayout.widget.ConstraintLayout>