<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityConverter"
    android:background="#A6E5E6"
    >

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/vrednosti"
        android:backgroundTint="#36ABAD"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"

        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/textViewiz"
                android:layout_width="200dp"
                android:layout_height="46dp"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:background="@drawable/vrednosti"
                android:textColor="@color/stevilke"
                android:textAlignment="center"
                android:autofillHints="false"
                android:hint="@string/pretvoriiz"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor"
                android:maxLength="15"
                />

            <Spinner
                android:id="@+id/spinneriz"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/imageButton2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:background="@drawable/change"
                android:layout_margin="10dp"
                tools:ignore="LabelFor"
                android:onClick="change"
                app:srcCompat="@android:drawable/stat_notify_sync"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewv"
                android:layout_width="200dp"
                android:layout_height="46dp"
                android:gravity="center"
                android:textColor="#555555"
                android:background="@drawable/vrednosti"
                android:layout_margin="10dp"
                android:text="@string/pretvori"
                android:backgroundTint="#d7d7d7"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

            <Spinner
                android:id="@+id/spinnerv"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                />

        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pretvornik"
        android:textColor="#026466"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />


    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:minDate="01/01/2010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.164" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_conversion"
        android:textColor="#026466"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/datePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/Def"
        android:textColor="#026466"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        app:layout_constraintVertical_bias="0.11" />


</androidx.constraintlayout.widget.ConstraintLayout>